# plopid

./: .kateproject  Cargo.toml
clients/: test_client_1.yaml
config/: plopid.toml  plopid.yaml
config/clients/: test_client_2.yaml
src/: lib.rs  main.rs
src/authn/: form.rs  mod.rs  pwd.rs
src/client/: mod.rs
src/clients/: registry.rs
src/config/: data.rs  default.rs  loader.rs  mod.rs  toml.rs  yaml.rs
src/jwt/: session.rs
src/oidc/: auth.rs  authz.rs  discovery.rs  login.rs  mod.rs  token.rs  userinfo.rs
src/services/: client.rs  mod.rs  registry.rs  service.rs
src/web/: base.rs  error.rs  mod.rs
src/web/authn/: form.rs  pwd.rs
templates/: authn_failure.html.hbs  authn_login.html.hbs  authn_success.html.hbs  base_layout.html.hbs  error.html.hbs  home.html.hbs  oidc_code_flow.html.hbs  oidc_implicit_flow.html.hbs
