[package]
name = "plopid"
version = "0.1.0"
edition = "2021"
authors = [ "Olivier Serve <tifauv@gmail.com>" ]

[dependencies]
rand         = "0.8.5"
serde        = "1.0"
serde_derive = "1.0"
serde_yaml   = "0.8.24"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = [ "json" ]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = [ "handlebars" ]
